# rmscene

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
src/rmscene/: __init__.py  __main__.py  crdt_sequence.py  rm2svg.py  scene_items.py  scene_stream.py  scene_tree.py  tagged_block_common.py  tagged_block_reader.py  tagged_block_stream.py  tagged_block_writer.py  text.py  utils.py  writing_tools.py
tests/: test_basic_data_stream.py  test_color_tool.py  test_crdt_sequence.py  test_scene_stream.py  test_scene_tree.py  test_tagged_block_reader.py  test_tagged_block_stream.py  test_tagged_block_writer.py  test_text.py  test_text_files.py
tests/data/: Bold_Heading_Bullet_Normal.rm  Color_and_tool_v3.14.4.rm  Lines_v2.rm  Lines_v2_updated.rm  More_color_highlight_shader_v3.15.4.2.rm  Normal_A_stroke_2_layers.rm  Normal_A_stroke_2_layers_v3.2.2.rm  Normal_A_stroke_2_layers_v3.3.2.rm  Wikipedia_highlighted_p1.rm  Wikipedia_highlighted_p2.rm  With_SceneInfo_Block.rm  test-crdt-ordering.rm
tests/rm/: Normal_AB.rm  abcd.strokes.rm  abcd.text.rm  dot.stroke.rm  extended.stroke.rm  fullpage.rm  layers.stroke.rm  text_and_strokes.rm  text_multiple_lines.rm  writing_tools.rm  writing_tools_with_text.rm  ypos.01.rm  ypos.02.rm  ypos.03.rm  ypos.04.rm
